<resources>
    <string name="app_name">Baemax</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="name_1">Sandwich Chicken</string>
    <string name="name_2">Sandwich Tuna</string>
    <string name="name_3">Sandwich Vegetable</string>

    <string name="name_4">Pizza Italian</string>
    <string name="name_5">Pizza Sweet</string>
    <string name="name_6">Pizza Cheese</string>

    <string name="name_7">Burgers Buffalo</string>
    <string name="name_8">Burgers Cheese</string>
    <string name="name_9">Burgers Bacon</string>

    <string name="name_10">Keto drink mix</string>
    <string name="name_11">Fancy drink mix</string>
    <string name="name_12">Cocktail Mojito</string>

    <string name="star_1">5</string>
    <string name="star_2">3</string>
    <string name="star_3">4</string>
    <string name="price_1">4.99</string>
    <string name="price_2">5.33</string>
    <string name="price_3">4.22</string>
    <string name="describe_1">very delicious,fragrant</string>
    <string name="describe_2">very yummy,fragrant</string>
    <string name="describe_3">very delicious,Stunning</string>
    <string name="hello_blank_fragment">hello_blank_fragment</string>

    <string name="dang_xuat">Đăng Xuất</string>
    <string name="v_voucher">Ví voucher</string>
    <string name="payment">Payment</string>
    <string name="cart_history">Lịch sử đơn hàng</string>
    <string name="management_app">Ứng dụng cho chủ quán</string>
    <string name="invite_fr">Mời bạn bè</string>
    <string name="feedback">Góp ý</string>



    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
</resources>