<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_profile"
    tools:context=".Profile">

    <ImageView
        android:id="@+id/imageViewProfileHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_profile_avater"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/imageProfile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/profile_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/imageViewProfileHolder"
        android:layout_marginTop="32dp"
        />

    <TextView
        android:id="@+id/textUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Võ Lê Nhật Huy"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintTop_toBottomOf="@id/imageProfile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/layoutProfileFeatures"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewProfileHolder"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:layout_marginTop="18dp"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="39dp">

        <LinearLayout
            android:id="@+id/layoutFeaturesItem1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="@drawable/profile_feature_item"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_voucher"
                android:layout_marginStart="25dp"/>
            <TextView
                android:textAlignment="center"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="57dp"
                android:text="@string/v_voucher"
                android:textColor="@color/textColor"
                android:textSize="22sp"
                android:layout_marginStart="18dp"
                tools:ignore="RtlCompat"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_go_next"
                android:layout_marginStart="159dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="32dp"
            android:id="@+id/layoutFeaturesItem2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="@drawable/profile_feature_item"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_payment"
                android:layout_marginStart="25dp"/>
            <TextView
                android:textAlignment="center"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="57dp"
                android:text="@string/payment"
                android:textColor="@color/textColor"
                android:textSize="22sp"
                android:layout_marginStart="18dp"
                tools:ignore="RtlCompat"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_go_next"
                android:layout_marginStart="175dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layoutFeaturesItem3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="@drawable/profile_feature_item"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_history"
                android:layout_marginStart="25dp"/>
            <TextView
                android:textAlignment="center"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="57dp"
                android:text="@string/cart_history"
                android:textColor="@color/textColor"
                android:textSize="22sp"
                android:layout_marginStart="18dp"
                tools:ignore="RtlCompat"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_go_next"
                android:layout_marginStart="93dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layoutFeaturesItem4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="@drawable/profile_feature_item"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_reward_credit"
                android:layout_marginStart="25dp"/>
            <TextView
                android:textAlignment="center"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="57dp"
                android:text="Reward Credits"
                android:textColor="@color/textColor"
                android:textSize="22sp"
                android:layout_marginStart="18dp"
                tools:ignore="RtlCompat"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_go_next"
                android:layout_marginStart="113dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layoutFeaturesItem5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="@drawable/profile_feature_item"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_management"
                android:layout_marginStart="25dp"/>
            <TextView
                android:textAlignment="center"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="57dp"
                android:text="@string/management_app"
                android:textColor="@color/textColor"
                android:textSize="22sp"
                android:layout_marginStart="18dp"
                tools:ignore="RtlCompat"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_go_next"
                android:layout_marginStart="30dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="14dp"
            android:id="@+id/layoutFeaturesItem6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="@drawable/profile_feature_item"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_addfr"
                android:layout_marginStart="25dp"/>
            <TextView
                android:textAlignment="center"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="57dp"
                android:text="@string/invite_fr"
                android:textColor="@color/textColor"
                android:textSize="22sp"
                android:layout_marginStart="18dp"
                tools:ignore="RtlCompat"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_go_next"
                android:layout_marginStart="151dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layoutFeaturesItem7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="@drawable/profile_feature_item"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_mail"
                android:layout_marginStart="25dp"/>
            <TextView
                android:textAlignment="center"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="57dp"
                android:text="@string/feedback"
                android:textColor="@color/textColor"
                android:textSize="22sp"
                android:layout_marginStart="18dp"
                tools:ignore="RtlCompat"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_go_next"
                android:layout_marginStart="204dp"/>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/buttonDangXuat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bg"
        android:text="@string/dang_xuat"
        android:textColor="@color/white"
        android:layout_marginStart="80dp"
        android:textSize="20sp"
        android:layout_marginEnd="80dp"
        android:textAllCaps="false"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="704dp"
        app:layout_constraintTop_toBottomOf="@+id/layoutProfileFeatures"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="39dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>